# MACE-ICTD

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
benchmarks/paper/: README.md
docs/: MACE_correspondence.md  USER_MANUAL.md  USER_MANUAL.zh-CN.md  compare_to_mace.py
lammps_user_mfftorch/: README.md
lammps_user_mfftorch/docs/: BUILD_AND_RUN.md
lammps_user_mfftorch/examples/: in.mfftorch_minimal  run_smoke_mfftorch.sh
lammps_user_mfftorch/test_cudagraph_repro/: CMakeLists.txt  build_lammps_full.sh  build_lammps_kokkos.sh  build_lammps_stage1.sh  in.mfftorch  in.mfftorch_lat  main.cpp  patch_lammps_cmake.py  run_md.sh  run_md_kk.sh  run_md_sweep.sh  run_repro.sh
mace_ictc/: _C_ictd_tp.py  __init__.py  mace_basis.py  synthetic.py
mace_ictc/bench/: __init__.py  bench_mace_ictd_vs_mace.py
mace_ictc/cli/: convert_mace.py  export_aoti_core.py  export_libtorch_core.py  inference_ddp.py  lammps_interface.py  preprocess.py  train.py
mace_ictc/csrc/: ictd_tp.cpp  ictd_tp_cuda.cu
mace_ictc/data/: __init__.py  bucket_sampler.py  collate.py  datasets.py  preprocessing.py
mace_ictc/evaluation/: __init__.py  calculator.py
mace_ictc/interfaces/: __init__.py  lammps_mliap.py  lammps_potential.py  mace_converter.py
mace_ictc/models/: __init__.py  _cueq_cg_tools.py  _mace_cg.py  _mace_symmetric_contraction.py  dispersion.py  ictd_disk_cache.py  ictd_fast.py  ictd_irreps.py  ictd_irreps_cuda.py  ictd_irreps_triton.py  long_range.py  mbd.py  mlp.py  multipole_readout.py  pure_cartesian_ictd_fix.py  pure_cartesian_ictd_layers.py  radial_basis.py  reciprocal_backend.py  triton_sparse_tp.py  zbl.py
mace_ictc/test/: __init__.py  test_angular_basis.py  test_cueq_makefx_training.py  test_cueq_product_backend.py  test_dispersion.py  test_energy_shift_scale.py  test_export_aoti_core.py  test_mace_converter.py  test_mbd.py  test_mbd_emit.py  test_mbd_train_poc.py  test_multipole_long_range.py  test_multipole_readout.py  test_preserve_edge_order.py  test_reciprocal_backend.py  (+3 more)
mace_ictd/: _C_ictd_tp.py  __init__.py  mace_basis.py  synthetic.py
(+127 files in other folders)
