[build-system]
requires = ["setuptools>=64", "wheel", "torch>=2.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mace-ictc"
version = "0.1.0"
description = "MACE in the Irreducible Cartesian Tensor Decomposition basis, with AOTInductor / make_fx / LAMMPS / long-range deployment"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.20.0",
    "e3nn>=0.4.4,<0.6.0",
    "ase>=3.22.0",
    "opt-einsum-fx>=0.1.4",
]

[project.optional-dependencies]
pyg = ["torch-scatter>=2.0.9", "torch-cluster>=1.6.0"]
cue = ["cuequivariance-torch>=0.8.1"]
e0 = ["pandas>=1.3.0"]
full = ["torch-scatter>=2.0.9", "torch-cluster>=1.6.0", "cuequivariance-torch>=0.8.1", "pandas>=1.3.0"]

[project.scripts]
mff-export-aoti = "mace_ictc.cli.export_aoti_core:main"
mff-export-core = "mace_ictc.cli.export_libtorch_core:main"
mff-lammps = "mace_ictc.cli.lammps_interface:main"
mff-convert-mace = "mace_ictc.cli.convert_mace:main"

[tool.setuptools.packages.find]
include = ["mace_ictc", "mace_ictc.*"]

[tool.setuptools.package-data]
mace_ictc = [
    "models/_ictd_cache/v1/cg/*.pt",
    "models/_ictd_cache/v1/cg_full/*.pt",
    "models/_ictd_cache/v1/u_so3/*.pt",
    "csrc/*.cpp",
    "csrc/*.cu",
]
